--- a/src/scss/2-Base/_reset.scss
+++ b/src/scss/2-Base/_reset.scss
@@ -13,6 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   line-height: $line-height-base;
+  scroll-behavior: smooth;
 }
 
 a {
